--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "puppet/modules/mongodb"]
 	path = puppet/modules/mongodb
 	url = https://github.com/puppetlabs/puppetlabs-mongodb.git
+[submodule "puppet/modules/tomcat"]
+	path = puppet/modules/tomcat
+	url = https://github.com/puppetlabs/puppetlabs-tomcat.git
