add git to vagrant modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "puppet/modules/tomcat"]
 	path = puppet/modules/tomcat
 	url = https://github.com/7terminals/puppet-tomcat.git
+[submodule "puppet/modules/git"]
+	path = puppet/modules/git
+	url = https://github.com/puppetlabs/puppetlabs-git.git
